:toc: macro
:toclevels: 1

= Change Log

A high level summary of noteworthy changes in each version.

NOTE:: Dependency version bumps are not listed here.

// git log --pretty="* %s" 0.3.0.2..HEAD

// only show TOC if this is the root document (not in the README)
ifndef::github_name[]
toc::[]
endif::[]
== 0.5.3.2

=== Fixes

* fix: message loss on closing or partitions revoked (#827) fixes (#826)
* fix: unbounded retry queue growth preventing polling from being throttled and leading to OOM (#834) fixes (#832, #817)

== 0.5.3.1

=== Fixes

* fix: ConcurrentModificationException Happened while high load and draining (#822) fixes (#821)
* fix: safely completing doClose() (#818) partially fixes (#809)
* Improved offset commit retry. Add support for SaslAuthenticationException retry timeout (#819), partially fixes (#809) in Commit_Sync mode

== 0.5.3.0

=== Fixes

* fix: ReactorProcessor - run used-defined function in provided scheduler rather than in pc-pool thread (#798 / #794), fixes (#793)
* fix: fix issue for cannot close and exit properly when re-balancing storm (#787)
* fix: Support for PCRetriableException in ReactorProcessor (#733)
* fix: NullPointerException on partitions revoked (#757)
* fix: remove lingeringOnCommitWouldBeBeneficial and unused imports (#732)
* fix: Fix failing auto-commit check for kafka-clients >= v3.7.0 (#721)
* fix: Fix redundant rebalance callback in LongPollingMockConsumer for Kafka >= 3.6 (#765)

=== Improvements

* improvement: stale containers exclusion and handling improvement (#779)
* improvement: add multiple caches for accelerating available container count calculation （#667）
* improvement: RecordContext now exposes lastFailureReason (#725)

=== Dependencies

* build(deps): Bump Kafka to 3.6.2
* build(deps): Bump Kafka to 3.7.0

== 0.5.2.8

=== Fixes

* fix: Fix equality and hash code for ShardKey with array key (#638), resolves (#579)
* fix: Fix target loading computation for inflight records (#662)